tests/ui/cli/non_existant_file.sol
//@ compile-flags: doesnotexist.sol
//~? ERROR: file doesnotexist.sol not found
